fix categories on mobile

--- a/v1-bootstrap/src/css/responsive.css
+++ b/v1-bootstrap/src/css/responsive.css
@@ -93,7 +93,7 @@
     }
 
     .social-section{
-        padding: 170px 0 40px;
+        padding: 80px 0 40px;
     }
     .social-section .border-btn{
         margin-bottom: 35px;
